--- a/deme_django/static/less/deme/adminbar.less
+++ b/deme_django/static/less/deme/adminbar.less
@@ -169,7 +169,7 @@ body {
     .left-wrap {
       position: relative;
       .pull-left {
-        float: none;
+        float: left;
       }
     }
     .nav {
@@ -218,7 +218,7 @@ body {
       }
       &.actions-wrap {
         position: relative;
-        float: none;
+        float: left;
         > li > .dropdown-menu {
           left: 0;
           right: auto;
